spring app/server and db config

--- a/profile-server/src/main/resources/application.properties
+++ b/profile-server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=profile-server
+spring.data.mongodb.uri=mongodb+srv://yangfei:xiaobude321@cluster0.e7sthln.mongodb.net/timesheet-db?retryWrites=true&w=majority
 
+server.port=11000
+
+#logging.level.org.springframework=DEBUG
