--- a/profile-server/src/main/resources/application.properties
+++ b/profile-server/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 spring.application.name=profile-server
+
+# Database resource
 spring.data.mongodb.uri=mongodb+srv://yangfei:xiaobude321@cluster0.e7sthln.mongodb.net/timesheet-db?retryWrites=true&w=majority
 
+# profile api server port
 server.port=11000
+
+# netflix eureka client properties
+eureka.instance.hostname=localhost
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+
+# Amazon S3 properties
+# TODO(yangfei)
 
 #logging.level.org.springframework=DEBUG
