added application properties for timesheet-server with comments

--- a/profile-server/src/main/resources/application.properties
+++ b/profile-server/src/main/resources/application.properties
@@ -6,11 +6,15 @@ spring.data.mongodb.uri=mongodb+srv://yangfei:xiaobude321@cluster0.e7sthln.mongo
 # profile api server port
 server.port=11000
 
-# netflix eureka client properties
+### netflix eureka client properties ###
+# use this hostname to identify and register the service
 eureka.instance.hostname=localhost
+# register itself with the registry(eureka)
 eureka.client.register-with-eureka=true
+# allow this client to discover other services registered with eureka(localhost)
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
+# URL for eureka server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Amazon S3 properties
 # TODO(yangfei)
