--- a/timesheet-server/src/main/resources/application.properties
+++ b/timesheet-server/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name=timesheet-server
 
+spring.data.mongodb.uri=mongodb+srv://yangfei:xiaobude321@cluster0.e7sthln.mongodb.net/timesheet-db?retryWrites=true&w=majority
+
+server.port=10000
+
+### netflix eureka client properties ###
+# use this hostname to identify and register the service
+eureka.instance.hostname=localhost
+# register itself with the registry(eureka)
+eureka.client.register-with-eureka=true
+# allow this client to discover other services registered with eureka(localhost)
+eureka.client.fetch-registry=true
+# URL for eureka server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
