--- a/profile-server/src/main/resources/application.properties
+++ b/profile-server/src/main/resources/application.properties
@@ -17,6 +17,10 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Amazon S3 properties
-# TODO(yangfei)
+# see https://docs.aws.amazon.com/general/latest/gr/s3.html
+amazonS3.endpointUrl=https://s3.us-east-2.amazonaws.com
+amazonS3.bucketName=timesheet-backend-profile-avatars
+amazonS3.accessKey=AKIARQ2PMVDSVHVLCNHT
+amazonS3.secretKey=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
 
 #logging.level.org.springframework=DEBUG
