--- a/timesheet-server/src/main/resources/application.properties
+++ b/timesheet-server/src/main/resources/application.properties
@@ -13,3 +13,10 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 # URL for eureka server
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Amazon S3 properties
+# see https://docs.aws.amazon.com/general/latest/gr/s3.html
+amazonS3.endpointUrl=https://s3.us-east-2.amazonaws.com
+amazonS3.bucketName=timesheet-backend-profile-avatars
+amazonS3.accessKey=AKIARQ2PMVDSVHVLCNHT
+amazonS3.secretKey=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
