--- a/timesheet-server/pom.xml
+++ b/timesheet-server/pom.xml
@@ -61,12 +61,13 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.163</version>
 		</dependency>
+
 		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.163</version>
-			<scope>compile</scope>
+			<groupId>de.jollyday</groupId>
+			<artifactId>jollyday</artifactId>
+			<version>0.4.9</version>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
