--- a/timesheet-frontend/package.json
+++ b/timesheet-frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.1.0",
+    "date-fns": "^2.30.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
