added eureka configuration for service discovery

--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=auth-server
+
 server.port=10203
 
 database.hibernate.url=jdbc:mysql://localhost:3306/timesheetDB
@@ -8,3 +10,13 @@ database.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 database.hibernate.showsql=true
 
 security.jwt.token.secret-key=Sunrise Sunset
+
+### netflix eureka client properties ###
+# use this hostname to identify and register the service
+eureka.instance.hostname=localhost
+# register itself with the registry(eureka)
+eureka.client.register-with-eureka=true
+# allow this client to discover other services registered with eureka(localhost)
+eureka.client.fetch-registry=true
+# URL for eureka server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
