--- a/profile-server/pom.xml
+++ b/profile-server/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.2.3-1</version>
 		</dependency>
+
+		<!-- Spring Boot Starter Data Redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
